# AWS_Agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  task3.3.md
.github/workflows/: __init__.py
.kiro/specs/eks-upgrade-agent/: design.md  requirements.md  tasks.md
data/: README.md
data/progress/: upgrade_test-upgrade-123.json
docs/: __init__.py  artifacts_modularization_summary.md  aws_orchestration_services.md  progress_modularization_summary.md  progress_tracking_and_artifacts.md
examples/: __init__.py  aws_orchestration_example.py  bedrock_integration_example.py  comprehend_integration_example.py  progress_tracking_example.py
examples/config/: README.md  __init__.py  sample_config.yaml
src/eks_upgrade_agent/: __init__.py
src/eks_upgrade_agent/common/: __init__.py  config.py  exceptions.py  logger.py
src/eks_upgrade_agent/common/artifacts/: README.md  __init__.py  file_handler.py  manager.py  s3_client.py  search_engine.py  session_manager.py
src/eks_upgrade_agent/common/aws/: __init__.py
src/eks_upgrade_agent/common/aws/bedrock/: __init__.py  bedrock_client.py  cost_tracker.py  model_invoker.py  prompt_templates.py  rate_limiter.py
src/eks_upgrade_agent/common/aws/comprehend/: __init__.py  analysis_engine.py  aws_client.py  comprehend_client.py  custom_classifier.py  entity_extractor.py  patterns.py  rate_limiter.py  result_processor.py
src/eks_upgrade_agent/common/aws/orchestration/: __init__.py  eventbridge.py  lambda_templates.py  ssm_client.py  step_functions.py
src/eks_upgrade_agent/common/aws_ai/: __init__.py  bedrock_client.py  model_invoker.py
src/eks_upgrade_agent/common/config/: __init__.py  agent.py  kubernetes.py  logging.py  security.py  terraform.py  upgrade.py  utils.py
src/eks_upgrade_agent/common/handler/: __init__.py  aws_service.py  base.py  configuration.py  execution.py  factories.py  perception.py  planning.py  rollback.py  validation.py
src/eks_upgrade_agent/common/logging/: __init__.py  config.py  handlers.py  processors.py  setup.py  utils.py
src/eks_upgrade_agent/common/models/: __init__.py  artifacts.py  aws_ai.py  aws_resources.py  cluster.py  enums.py  progress.py  upgrade.py  validation.py
src/eks_upgrade_agent/common/progress/: README.md  __init__.py  callback_manager.py  eventbridge_notifier.py  storage.py  tracker.py  websocket_server.py
src/eks_upgrade_agent/execution/: __init__.py
src/eks_upgrade_agent/perception/: __init__.py
src/eks_upgrade_agent/reasoning/: __init__.py
src/eks_upgrade_agent/reasoning/strategies/: __init__.py
src/eks_upgrade_agent/validation/: __init__.py
tasks/: common_tests_modularization_summary.md  task1.md  task2.1.md  task2.2.md  task2.3.md  task2.4.md  task3.1.md  task3.2.md  test_reorganization_summary.md
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_bedrock_client.py  test_comprehend_client.py  test_cost_tracker.py  test_custom_classifier.py  test_entity_extractor.py  test_exceptions.py  test_logger.py  test_model_invoker.py  test_progress_tracker.py  test_rate_limiter.py  test_test_artifacts.py
tests/unit/aws/: __init__.py
tests/unit/aws/bedrock/: __init__.py  test_bedrock_client.py  test_cost_tracker.py
tests/unit/aws/comprehend/: __init__.py  test_action_items.py  test_analysis_engine.py  test_aws_client.py  test_breaking_change_detection.py  test_client.py  test_entity_extraction.py  test_entity_validation.py  test_kubernetes_context.py  test_patterns.py  test_rate_limiting.py  test_text_classification.py
tests/unit/aws/orchestration/: __init__.py  test_eventbridge.py  test_lambda_templates.py  test_ssm_client.py  test_step_functions.py
tests/unit/common/: __init__.py
tests/unit/common/artifacts/: __init__.py  conftest.py  test_artifact_operations.py  test_collection_management.py  test_s3_operations.py  test_session_management.py
tests/unit/common/logging/: __init__.py  conftest.py  test_config.py  test_handlers.py  test_setup.py  test_utilities.py
tests/unit/common/progress/: __init__.py  conftest.py  test_eventbridge_integration.py  test_progress_reporting.py  test_task_management.py  test_upgrade_lifecycle.py
